--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 <section>
 <h2>My Present</h2>
-<img class="left" src="character_day.jpg">
+<img class="left" src="character_day.jpeg">
 <P>I have 2 older brothers that are both in college. My oldest brother is 21 and is a senior at <a href="http://www.clemson.edu/">  Clemson University</a>. My middle brother is 18 and is also at Clemson but is a freshman. This year is the first year that I am an "only child" because neither of them lives at the house anymore because they are both in college. It sucks because it gets so lonely but is nice because I get the bathroom all to myself.</P>
-<img class="right" src="on_a_boat.jpg">
+<img class="right" src="on_a_boat.jpeg">
 <P>I play soccer at CESA which is short for Carolina Elite Soccer Academy. I play on the u18 ECNL team which is the top level team. We travel to Florida, Alabama and Georgia for our league games. Then when we have showcases we travel to Phoenix, New Jersey and Florida again. Normally every weekend we have 2 games but we are only allowed to play a game a day because the games are so intense and take a lot of energy.</P>
 </section>
 
